# langchain-study2

./: README.md  pyproject.toml  requirements.txt
app/: 1_langchain.py  4_streamlit.py
